--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "watch-css": "yarn run build-css && stylus -c -w src/static/stylus --out src/static/css",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
+    "dev": "npm run start",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test",
