--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^23.3.12",
+    "@types/node": "^10.12.18",
+    "@types/re-base": "^3.2.0",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-router-dom": "^4.3.1",
     "firebase": "^5.5.4",
     "npm-run-all": "^4.1.3",
     "re-base": "^4.0.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
-    "stylus": "^0.54.5"
+    "react-scripts": "2.1.3",
+    "stylus": "^0.54.5",
+    "typescript": "^3.2.4"
   },
   "scripts": {
     "build-css": "stylus -c src/static/stylus/ --out src/static/css",
